{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 95,
  "lineage": "d5af6cbe-40ba-a71b-a9f5-4954a6bb20f6",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.65.77.51",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-03-27T08:13:47.442-07:00",
            "id": "projects/infra-memolog/regions/europe-west6/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-memolog",
            "region": "europe-west6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/regions/europe-west6/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-27T08:13:47.292-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-memolog/global/firewalls/allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
            "priority": 1000,
            "project": "infra-memolog",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/firewalls/allow-mongo-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app",
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-27T08:13:47.318-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-memolog/global/firewalls/allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
            "priority": 1000,
            "project": "infra-memolog",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-27T08:13:47.426-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-memolog/global/firewalls/default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
            "priority": 1000,
            "project": "infra-memolog",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/images/reddit-app",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-memolog/zones/europe-west6-b/instances/reddit-app",
            "instance_id": "1065655489369712344",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQChdInp8bPVSzqkGzRGP2KQSFYPQek7iNqT0qlrsdxX7aiCKdar0cHFyVAKPK/5VjHYignBuuZLz+ysxI8tzUtNWOMA9p3GsP2ykv2q8An1yE93mnPefo9Ejr6QZMVPE7AEvUU9eIJouPILDmf5PU5iMkEqfzxLAPIpoCMYSlPbbiG6lCIrkZC4u1iFjYnK1xV4YWqslrlj9oJRTG5VSv5sy6ImtRqYk0XmHBA+Y7Ma05N/2Bx3ZbYrTg5cfOkq4IuaHqPjYgNy6Ul84DkwB66IrqZkFvKluGC/FKjd1XoQTLxhti1yxNL1N8Vi4oNMzS9BjSiJeuAD272lk78JSiQcW8c2eTVn2234Gomg8QoXIH7lgHaRqyXSavbckNPuUKgVWi6FVEstsHCKls5JYF0eDu5z4oDGwlbW25ihxduEWk [...]
            },
            "metadata_fingerprint": "Q9G0Rvv5C-E=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.77.51",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
                "network_ip": "10.172.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-memolog/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "infra-memolog"
              }
            ],
            "project": "infra-memolog",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/instances/reddit-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west6-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/images/reddit-db",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-memolog/zones/europe-west6-b/instances/reddit-db",
            "instance_id": "3596184872245503684",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQChdInp8bPVSzqkGzRGP2KQSFYPQek7iNqT0qlrsdxX7aiCKdar0cHFyVAKPK/5VjHYignBuuZLz+ysxI8tzUtNWOMA9p3GsP2ykv2q8An1yE93mnPefo9Ejr6QZMVPE7AEvUU9eIJouPILDmf5PU5iMkEqfzxLAPIpoCMYSlPbbiG6lCIrkZC4u1iFjYnK1xV4YWqslrlj9oJRTG5VSv5sy6ImtRqYk0XmHBA+Y7Ma05N/2Bx3ZbYrTg5cfOkq4IuaHqPjYgNy6Ul84DkwB66IrqZkFvKluGC/FKjd1XoQTLxhti1yxNL1N8Vi4oNMzS9BjSiJeuAD272lk78JSiQcW8c2eTVn2234Gomg8QoXIH7lgHaRqyXSavbckNPuUKgVWi6FVEstsHCKls5JYF0eDu5z4oDGwlbW25ihxduEWk [...]
            },
            "metadata_fingerprint": "Q9G0Rvv5C-E=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.26.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-memolog/global/networks/default",
                "network_ip": "10.172.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-memolog/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "infra-memolog"
              }
            ],
            "project": "infra-memolog",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-memolog/zones/europe-west6-b/instances/reddit-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west6-b"
          }
        }
      ]
    }
  ]
}